# veridelta

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: LICENSE_HEADER.txt
.github/workflows/: ci.yml  docs.yml  license-check.yml  release.yml
api/: index.html
configuration/: index.html
docs/: api.md  configuration.md  index.md  roadmap.md
docs/assets/data/: sample_taxi_data.parquet
docs/examples/: advanced_rules.ipynb  quickstart.ipynb  quickstart_cli.ipynb  scientific_data_migration.ipynb  yaml_config.ipynb
examples/advanced_rules/: index.html
examples/quickstart/: index.html
examples/quickstart_cli/: index.html
examples/yaml_config/: index.html
roadmap/: index.html
search/: search_index.json
src/veridelta/: __init__.py  cli.py  config.py  datasets.py  engine.py  exceptions.py  main.py  models.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/e2e/: test_cli_workflow.py
tests/integration/: test_module_handoff.py  test_python_api.py
tests/smoke/: __init__.py  test_installation.py
tests/unit/: test_cli.py  test_config.py  test_datasets.py  test_engine.py  test_models.py
