[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridelta"
version = "0.1.0"
description = "Semantic diffing for mission-critical data pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Veridelta Maintainers", email = "veridelta.labs@gmail.com" }
]
dependencies = [
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[project.scripts]
veridelta = "veridelta.cli:main"

[tool.uv]
managed = true

[tool.mypy]
python_version = "3.10"
files = ["src/veridelta", "tests"]
strict = true
plugins = ["pydantic.mypy"]
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]
warn_return_any = false
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["polars.*", "yaml.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "N", "PT", "D"]
ignore = ["E501", "B008", "D104", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true